# kcom-predicting-stellar-class

./: .gitignore  AGENTS.md  Iteration.md  Makefile  README.md  pyproject.toml  requirements.txt
config/: baseline.yaml  config.yaml
config/experiments/: final.yaml  v001_keep_categoricals.yaml  v002_tuned_hyperparams.yaml  v003_label_encoding.yaml  v004_cb_native.yaml  v005_lgb_native.yaml  v006_interactions.yaml  v007_augment.yaml  v007_no_augment.yaml  v008_simple_avg.yaml  v009_thresholds.yaml  v011_model_diversity.yaml  v012_pseudo_label_099.yaml  v013_gbm_meta.yaml
config/tfm/: autogluon_best.yaml  autogluon_fast.yaml  dummy.yaml  tabicl_v2_ctx10k_raw.yaml  tabicl_v2_ctx50k_domain.yaml  tabpfn26_ctx10k_raw.yaml
docs/experiments/: categoricals.md  interactions.md  original_data_augmentation.md  tfm_benchmark.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
outputs/runs/20260624_131300_baseline/: config.yaml  metrics.json
outputs/runs/20260624_131519_v001_keep_categoricals/: config.yaml  metrics.json
outputs/runs/20260624_131920_v002_tuned_hyperparams/: config.yaml  metrics.json
outputs/runs/20260624_154648_v003_label_encoding/: config.yaml  metrics.json
outputs/runs/20260624_155119_v004_cb_native/: config.yaml  metrics.json
outputs/runs/20260624_155454_v005_lgb_native/: config.yaml  metrics.json
outputs/runs/20260624_202028_v001/: metrics.json
outputs/runs/20260624_215825_v006_interactions/: config.yaml  (+1 more)
scripts/: __init__.py  adversarial_validate.py  benchmark_tfm.py  blend_predictions.py  compare.py  predict.py  score_tfm.py  select_best_submission.py  train.py  visualize.py
src/: __init__.py  data.py  features.py  models.py
src/stellar/: __init__.py  blending.py  data.py  features.py  foundation.py  models.py  tracking.py
tests/: test_data.py  test_foundation.py  test_integration.py  test_models.py
(+11 files in other folders)
