[project]
name = "kcom-predicting-stellar-class"
version = "0.1.0"
description = "Kaggle competition: Predicting Stellar Class (Playground S6E6)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=2.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
    "ipykernel>=6.29,<8",
    "jupyterlab>=4.2,<5",
    "notebook>=7.2,<8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stellar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
